syntax = "proto3";


// Menentukan paket untuk file .proto ini
package account;

// Menentukan Go package untuk hasil generate kode
option go_package = "/proto/account;account"; // Ganti dengan path sesuai proyek Anda

service Account {
  rpc Create(AccountModel) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
}

message AccountModel {
  // @gotags: bson:"_id"
  string id = 1;
  // @gotags: bson:"info"
  string info = 2;
  // @gotags: bson:"credential"
  string credential = 3;
}

message CreateResponse {
  bool status = 1;
  int32 code = 2;
  string msg = 3;
  string id = 4;
  string error = 5;
}


message ReadRequest {
  int32 limit = 1;
}

message ReadResponse {
  bool status = 1;
  int32 code = 2;
  string msg = 3;
  repeated AccountModel data = 4;
  string error = 5;
}

message UpdateRequest {
  AccountModel query = 1;
  AccountModel search = 2;
}

message UpdateResponse {
  bool status = 1;
  int32 code = 2;
  string msg = 3;
  repeated AccountModel data = 4;
  string error = 5;
}